[package]
name = "payment-escrow"
version = "0.1.0"
description = "Trustless payment escrow for x402 protocol on Solana"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "payment_escrow"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
idl-build = ["anchor-lang/idl-build"]
default = []

[dependencies]
anchor-lang = "0.32.1"
