[package]
name = "payment-splitter"
version = "0.1.0"
description = "Trustless payment splitter for Solana Agent Economy"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "payment_splitter"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
idl-build = ["anchor-lang/idl-build"]
default = []

[dependencies]
anchor-lang = "0.32.1"
